# SotuHire

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  mkdocs.yml  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements-scraping.txt  requirements.txt  start-sotuhire.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml
apps/: README.md  __init__.py
apps/api/: __init__.py  config.py  main.py
apps/web/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
benchmarks/baselines/: v1.9.7-gemini.json  v1.9.7-local.json
benchmarks/results/: 20260714T203051Z-release-smoke-197.json  20260714T210907Z-golden-197.json  20260714T210907Z-mock-197.json
browser-extension/: README.md  background.js  content.js  github_injected.js  manifest.json  popup.html  popup.js  project_analysis.js  queue_runtime.js  styles.css
browser-extension/store/: description-full.md  description-short.txt  listing.md  privacy-policy.md  test-instructions.md
config/: capabilities.json  sources.example.toml
docs/: README.md  documentation-index.md  index.md  roadmap-history.md  roadmap.md  vision.md
docs/00-audit/: documentation-audit.md  expanded-update-audit.json  expanded-update-summary.md  local-build-report.md  mvp-tailor-fit-update-summary.md  (+5 more)
examples/: demo_job_analista_soc.md  demo_job_arquiteto_interiores.md  demo_job_dev_backend.md  demo_job_enfermeiro_uti.md  demo_job_engenheiro_civil_obras.md  demo_job_professor_fundamental.md  demo_resume_arquitetura.md  demo_resume_cybersecurity.md  demo_resume_dev_backend.md  demo_resume_enfermagem.md  demo_resume_engenharia_civil.md  demo_resume_pedagogia.md
modules/: __init__.py  examples.py
scripts/: README.md  backup_data.py  capture_docs_screenshots.py  capture_extension_screenshots.py  capture_screenshots.py  capture_streamlit_v1_1_screenshots.py  capture_web_walkthrough.py  check_data_health.py  generate_integration_matrix.py  generate_prompt_catalog.py  migrate_local_data.py  package_extension.py  restore_data.py  run_ai_benchmark.py  run_api.py  scan_secrets.py  validate_capabilities.py  verify_clean_install.py
tests/: api_test_helpers.py  test_academic_lattes.py  test_advanced_mode_layout.py  test_ai_benchmark_runner.py  test_ai_context_ab_evaluation.py  test_ai_evaluation_metrics.py  test_ai_feedback_outcomes.py  test_ai_golden_datasets.py  test_ai_provider_mock.py  test_ai_provider_routing.py  test_ai_quality_api.py  test_ai_run_store.py  test_ai_setup_wizard.py  test_ai_task_registry.py  test_analysis_with_memory.py  test_api_ai_routing_v15.py  test_api_ai_settings.py  test_api_ats.py  test_api_data_reliability.py  test_api_extension_bridge.py  test_api_github.py  test_api_health.py  test_api_job.py  test_api_match.py  test_api_profile.py  test_api_radar.py  test_api_radar_scheduler.py  test_api_radar_wishlist_draft.py  test_api_resume.py  test_api_source_imports.py  test_api_tailor.py  test_api_tracker.py  test_application_intelligence.py  test_ats_score.py  test_authenticated_browser_connector.py  test_authenticated_browser_session.py  test_authenticated_browser_ui.py  test_auto_flow.py  test_browser_extension_manifest.py  test_browser_extension_payload_schema.py  (+141 more)
(+653 files in other folders)
