[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sotuhire"
version = "1.9.6"
description = "AI-assisted career copilot for resume analysis, job matching and responsible opportunity discovery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Soturine" }
]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "pydantic>=2.7.0",
  "pymupdf>=1.24.0",
  "python-docx>=1.1.0",
  "python-dotenv>=1.0.0",
  "streamlit>=1.35.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "playwright>=1.55.0",
  "pre-commit>=3.7.0",
  "pyright>=1.1.400",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]
ai = [
  "google-genai>=1.0.0,<3.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
markers = [
  "external_ai: tests that call external AI providers and require local opt-in environment variables"
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["modules", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM",
]
ignore = [
  "E501"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"docs/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.coverage.run]
source = ["modules"]

[tool.sotuhire]
architecture = "modular"
privacy_mode = "local-first"
auto_apply = false
review_required = true

[tool.setuptools.packages.find]
include = ["apps*", "modules*"]
